--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,5 @@
+variables:
+  ARTIFACT_PATH: 'target/*-spigot.jar'
 include:
   - project: 'Development/Infrastructure/cicd-templates'
     ref: 'master'
